# HCPlayerDemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cpp/: main.cpp
cpp/hk/: HCNetSDK.h  player.cpp  player.h  plaympeg4.h
qml/: AppSettings.qml  KitHCPlayer.qml  root.qml  video.qml
